--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -21,9 +21,10 @@ projects:
 # Contact Section
 
 social:
-- {icon: 'linkedin',  link: 'https://linkedin.com/in/lenpaul'}
-- {icon: 'github',    link: 'https://github.com/lenpaul'}
-- {icon: 'twitter',   link: 'https://twitter.com/paululele'}
+- {icon: 'linkedin',  link: 'https://linkedin.com/in/ozarate'}
+- {icon: 'github',    link: 'https://github.com/waloZarate'}
+- {icon: 'twitter',   link: 'https://twitter.com/walozarate'}
+- {icon: 'facebook',   link: 'https://twitter.com/osvaldo.zaratec'}
 
 
 # social network icons available: 'twitter' / 'facebook' / 'github' / 'pinterest' 'google-plus' / 'linkedin' / 'youtube' / 'instagram' / 'dribbble' / 'behance' / 'soundcloud' / 'vine'
