--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,6 @@ plugins:   [jekyll-sitemap, jekyll-feed,  jekyll-seo-tag]
 
 # Customise atom feed settings (this is where Jekyll-Feed gets configuration information)
 
-title:		   "Portfolio Oswaldo Zárate"
+title:		   "Bienvenido al Portafolio de Proyectos de Oswaldo L. Zárate"
 description: "Powered by Jekyll and GitHub Pages"
 author:      "Oswaldo L. Zárate"
